[package]
name = "kumo"
version = "0.1.0"
edition = "2024"
description = "A minimal, skills-based personal agent gateway"
license = "MIT"
repository = "https://github.com/algonacci/kumo"

[dependencies]
anyhow = "1"
dialoguer = "0.11"
directories = "6"
serde = { version = "1", features = ["derive"] }
teloxide = "0.17"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = "0.9"
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
