[package]
name = "kumo"
version = "0.1.0"
edition = "2024"
description = "A minimal, skills-based personal agent gateway"
license = "MIT"
repository = "https://github.com/algonacci/kumo"

[dependencies]
anyhow = "1"
async-trait = "0.1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
directories = "6"
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.8", features = ["client", "transport-child-process"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
teloxide = "0.17"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9"
uuid = { version = "1", features = ["v4"] }
webbrowser = "1"
